added inline list

--- a/index.html
+++ b/index.html
@@ -41,5 +41,12 @@
         <li>Item Three</li>
     </ul>
 
+    <h3>Unordered Inline Lists</h3>
+
+    <ul>
+        <li>Inline Item One</li>
+        <li>Inline Item Two</li>
+    </ul>
+
 </body>
 </html>
