--- a/index.html
+++ b/index.html
@@ -46,7 +46,21 @@
     <ul>
         <li>Inline Item One</li>
         <li>Inline Item Two</li>
+        <li>Inline Item Three</li>
+
     </ul>
+
+    <h3>Reversed Orderd Lists</h3>
+
+    <ol>
+        <li>Milk</li>
+        <li>Eggs</li>
+        <li>Bread</li>
+    </ol>
+
+    <hr >
+
+    <h2>@Nav</h2>
 
 </body>
 </html>
