feat: add image

--- a/index.html
+++ b/index.html
@@ -61,6 +61,32 @@
     <hr >
 
     <h2>@Nav</h2>
+    
+    <div>I am Brand</div>
+
+    <nav>
+        <ul>
+            <li>
+                <a href="/">Home</a>
+            </li>
+            <li>
+                <a href="/">Product</a>
+            </li>
+            <li>
+                <a href="/">About</a>
+            </li>
+
+        </ul>
+    </nav>
+
+    <hr >
+
+    <h2>Header</h2>
+
+    <header>
+        <img src="images/hero.svg" />
+        <h1>Heading inside hero</h1>
+    </header>
 
 </body>
 </html>
