--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Welcome to SomeEarth's Library</h1>
 
-    <p>I am attending NeoG's Camp session on Html5 followed by CSS. Creating a library which will make my project looks good and consistent</p>
+    <p>I am attending NeoG's Camp session on Html5 followed by CSS. Creating a library which will make my project looks
+        good and consistent</p>
 
-    <hr >
+    <hr>
 
     <h2>@Typography </h2>
 
@@ -28,9 +31,9 @@
 
     <h2>@links</h2>
     <a href="https://www.google.com">Primary Link</a>
-    <a href="/">Secondary Link</a> 
+    <a href="/">Secondary Link</a>
 
-    <hr >
+    <hr>
 
     <h2>@Lists</h2>
 
@@ -58,10 +61,10 @@
         <li>Bread</li>
     </ol>
 
-    <hr >
+    <hr>
 
     <h2>@Nav</h2>
-    
+
     <div>I am Brand</div>
 
     <nav>
@@ -79,7 +82,7 @@
         </ul>
     </nav>
 
-    <hr >
+    <hr>
 
     <h2>Header</h2>
 
@@ -88,5 +91,31 @@
         <h1>Heading inside hero</h1>
     </header>
 
+    <hr>
+
+    <h2>@Section</h2>
+    <section>
+        <h3>@White Section</h3>
+        <p>This will have white background </p>
+    </section>
+
+    <section>
+        <h3>@Off White Section</h3>
+        <p>This will have gray background </p>
+    </section>
+
+    <footer>
+        <div> Some text here</div>
+        <ul>
+            <li>Social One</li>
+            <li>Social Two</li>
+            <li>Social Three</li>
+        </ul>
+    </footer>
+
+
+
+
 </body>
+
 </html>
