--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link href="styles.css" rel="stylesheet" />
+
 </head>
 
 <body>
@@ -21,6 +24,8 @@
     <h1> This is the biggest heading </h1>
     <h2> This is the second biggest heading</h2>
     <p> This is the Normal text</p>
+
+    <p> This paragraph will have <strong>Bold</strong> Text</p>
 
     <small> This is relatively smaller text </small>
 
@@ -103,6 +108,10 @@
         <h3>@Off White Section</h3>
         <p>This will have gray background </p>
     </section>
+
+    <hr >
+
+    <h2>@Footer</h2>
 
     <footer>
         <div> Some text here</div>
