--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
 
     <h2> @container</h2>
 
-    <h3> fluid container</h3>
-    <div> This is a fluid container and this will go till the end of the page. </div>
+    <h3>fluid container</h3>
+    <div class="container "> This is a fluid container and this will go till the end of the page. </div>
+
+    <h3>Center Container</h3>
+    <div class="container container-center">This is a centered container it will go</div>
 
     <h2>@links</h2>
     <a href="https://www.google.com">Primary Link</a>
