--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <div class="container container-center">This is a centered container it will go</div>
 
     <h2>@links</h2>
-    <a href="https://www.google.com">Primary Link</a>
-    <a href="/">Secondary Link</a>
+    <a class="link link-primary" href="https://www.google.com">Primary Link</a>
+    <a class="link link-secondary" href="/">Secondary Link</a>
 
     <hr>
 
