--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     <h2>@Lists</h2>
 
     <h3>Unordered Lists</h3>
-    <ul>
+    <p>This lists will not have bullet style</p>
+    <ul class="list-non-bullet">
         <li>Item One</li>
         <li>Item Two</li>
         <li>Item Three</li>
@@ -54,16 +55,16 @@
 
     <h3>Unordered Inline Lists</h3>
 
-    <ul>
-        <li>Inline Item One</li>
-        <li>Inline Item Two</li>
-        <li>Inline Item Three</li>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline">Inline Item One</li>
+        <li class="list-item-inline">Inline Item Two</li>
+        <li class="list-item-inline">Inline Item Three</li>
 
     </ul>
 
     <h3>Reversed Orderd Lists</h3>
 
-    <ol>
+    <ol reversed>
         <li>Milk</li>
         <li>Eggs</li>
         <li>Bread</li>
