--- a/index.html
+++ b/index.html
@@ -74,18 +74,17 @@
 
     <h2>@Nav</h2>
 
-    <div>I am Brand</div>
-
-    <nav>
-        <ul>
-            <li>
-                <a href="/">Home</a>
+    <nav class="navigation container">
+        <div class="nav-brand">I am Brand</div>
+        <ul class="list-non-bullet nav-pills"> 
+            <li class="list-item-inline">
+                <a class="link link-active" href="/">Home</a>
             </li>
-            <li>
-                <a href="/">Product</a>
+            <li class="list-item-inline">
+                <a class="link" href="/">Product</a>
             </li>
-            <li>
-                <a href="/">About</a>
+            <li class="list-item-inline">
+                <a class="link" href="/">About</a>
             </li>
 
         </ul>
@@ -113,7 +112,7 @@
         <p>This will have gray background </p>
     </section>
 
-    <hr >
+    <hr>
 
     <h2>@Footer</h2>
 
