--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
 
     <h2>Header</h2>
 
-    <header>
-        <img src="images/hero.svg" />
-        <h1>Heading inside hero</h1>
+    <header class="hero">
+        <img class="hero-img" src="images/hero.svg" />
+        <h1 class="hero-heading">Adarsh Baalak the <span class="heading-inverted">Web Developer </span></h1>
     </header>
 
     <hr>
