--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <nav class="navigation container">
         <div class="nav-brand">I am Brand</div>
-        <ul class="list-non-bullet nav-pills"> 
+        <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link link-active" href="/">Home</a>
             </li>
@@ -102,14 +102,18 @@
     <hr>
 
     <h2>@Section</h2>
-    <section>
-        <h3>@White Section</h3>
-        <p>This will have white background </p>
+    <section class="section">
+        <div class="container container-center">
+            <h1>@White Section</h1>
+            <p>This will have white background </p>
+        </div>
     </section>
 
-    <section>
-        <h3>@Off White Section</h3>
-        <p>This will have gray background </p>
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>@Off White Section</h1>
+            <p>This will have gray background </p>
+        </div>
     </section>
 
     <hr>
