--- a/index.html
+++ b/index.html
@@ -120,12 +120,18 @@
 
     <h2>@Footer</h2>
 
-    <footer>
-        <div> Some text here</div>
-        <ul>
-            <li>Social One</li>
-            <li>Social Two</li>
-            <li>Social Three</li>
+    <footer class="footer container">
+        <div class="footer-header"> Some text here</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" href="/">Social One</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">Social Two</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">Social Three</a>
+            </li>
         </ul>
     </footer>
 
