--- a/index.html
+++ b/index.html
@@ -1,143 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home| Adarsh Baalak</title>
 
     <link href="styles.css" rel="stylesheet" />
 
 </head>
-
 <body>
-    <h1>Welcome to SomeEarth's Library</h1>
-
-    <p>I am attending NeoG's Camp session on Html5 followed by CSS. Creating a library which will make my project looks
-        good and consistent</p>
-
-    <hr>
-
-    <h2>@Typography </h2>
-
-    <h1> This is the biggest heading </h1>
-    <h2> This is the second biggest heading</h2>
-    <p> This is the Normal text</p>
-
-    <p> This paragraph will have <strong>Bold</strong> Text</p>
-
-    <small> This is relatively smaller text </small>
-
-    <h2> @container</h2>
-
-    <h3>fluid container</h3>
-    <div class="container "> This is a fluid container and this will go till the end of the page. </div>
-
-    <h3>Center Container</h3>
-    <div class="container container-center">This is a centered container it will go</div>
-
-    <h2>@links</h2>
-    <a class="link link-primary" href="https://www.google.com">Primary Link</a>
-    <a class="link link-secondary" href="/">Secondary Link</a>
-
-    <hr>
-
-    <h2>@Lists</h2>
-
-    <h3>Unordered Lists</h3>
-    <p>This lists will not have bullet style</p>
-    <ul class="list-non-bullet">
-        <li>Item One</li>
-        <li>Item Two</li>
-        <li>Item Three</li>
-    </ul>
-
-    <h3>Unordered Inline Lists</h3>
-
-    <ul class="list-non-bullet">
-        <li class="list-item-inline">Inline Item One</li>
-        <li class="list-item-inline">Inline Item Two</li>
-        <li class="list-item-inline">Inline Item Three</li>
-
-    </ul>
-
-    <h3>Reversed Orderd Lists</h3>
-
-    <ol reversed>
-        <li>Milk</li>
-        <li>Eggs</li>
-        <li>Bread</li>
-    </ol>
-
-    <hr>
-
-    <h2>@Nav</h2>
-
+    
     <nav class="navigation container">
-        <div class="nav-brand">I am Brand</div>
+        <div class="nav-brand">Adarsh Baalak</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link link-active" href="/">Home</a>
+                <a class="link link-active" href="/"><strong>Home</strong></a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">Product</a>
+                <a class="link" href="projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">About</a>
+                <a class="link" href="blogs.html">Blogs</a>
             </li>
 
         </ul>
     </nav>
 
-    <hr>
-
-    <h2>Header</h2>
-
     <header class="hero">
-        <img class="hero-img" src="images/hero.svg" />
+        <img class="hero-img" src="/images/hero.svg" />
         <h1 class="hero-heading">Adarsh Baalak the <span class="heading-inverted">Web Developer </span></h1>
     </header>
+  
 
-    <hr>
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>Technologies</h1>
+            <p>I'm Familiar with HTML5, CSS3, Git, Javascript, NODE JS, React JS and Web Hosting</p>
+        </div>
+    </section>
 
-    <h2>@Section</h2>
     <section class="section">
         <div class="container container-center">
-            <h1>@White Section</h1>
-            <p>This will have white background </p>
+            <h1>Projects</h1>
+            <p>I like to showcase my work and thus, you can see my projects hosted online</p>
+            <a class="link link-primary" href="/">See Projects</a>
         </div>
+
     </section>
 
     <section class="section ow">
         <div class="container container-center">
-            <h1>@Off White Section</h1>
-            <p>This will have gray background </p>
+            <h1>Blogs</h1>
+            <p>I am also working on some technical and non technical blogs. I like to document my journey of learning.</p>
+            <a class="link link-secondary" href="/">Read Blogs</a>
         </div>
     </section>
 
-    <hr>
-
-    <h2>@Footer</h2>
-
     <footer class="footer container">
-        <div class="footer-header"> Some text here</div>
+        <div class="footer-header">Social Media Handles</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="/">Social One</a>
+                <a class="link" href="https://github.com/SomeEarth86">Github</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">Social Two</a>
+                <a class="link" href="https://twitter.com/Samarth019">Twitter</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">Social Three</a>
+                <a class="link" href="https://www.linkedin.com/in/samarth-krishna-joshi/">Linkedin</a>
             </li>
         </ul>
     </footer>
 
-
-
-
 </body>
-
 </html>
