--- a/blogs.html
+++ b/blogs.html
@@ -11,6 +11,22 @@
 </head>
 <body>
     
+    <nav class="navigation container">
+        <div class="nav-brand">Adarsh Baalak</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link " href="/"><strong>Home</strong></a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link " href="projects.html">Projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link link-active" href="blogs.html">Blogs</a>
+            </li>
+
+        </ul>
+    </nav>
+
     <header class="hero">
        
         <h1 class="hero-heading">My <span class="heading-inverted">Blogs</span></h1>
