--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projects | Adarsh Baalak</title>
+
+    <link href="styles.css" rel="stylesheet" />
+
 </head>
+
 <body>
-    
+
+    <nav class="navigation container">
+        <div class="nav-brand">Adarsh Baalak</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link" href="/"><strong>Home</strong></a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link link-active" href="projects.html">Projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="blogs.html">Blogs</a>
+            </li>
+
+        </ul>
+    </nav>
+
+    <header class="hero">
+
+        <h1 class="hero-heading">See my <span class="heading-inverted">Code </span></h1>
+    </header>
+
+    <ul class="list-non-bullet">
+        <li>
+            <div class="container container-center">
+                <h1>Could you "BE" more fanatic about F.R.I.E.N.D.S. ?</h1>
+                <small>Jul 2020</small>
+                <p>Another <strong>Node JS</strong> CLI app. Buult as an assignment in the camp. This checks your
+                    knowledge on the very famous Sitcom of all time F.R.I.E.N.D.S .</p>
+
+                <a class="link link-primary" href="https://replit.com/@SomeEarthJ/Friends-quiz?embed=1&output=1#index.js"> Live Project</a>
+                <a class="link link-secondary" href="https://github.com/SomeEarth86/Quiz-2-FRIENDS"> View Source Code</a>
+            </div>
+        </li>
+        <li>
+            <div class="container container-center">
+                <h1>TVF Aspirant's Quiz</h1>
+                <small>Jul 2020</small>
+                <p>A CLI app built with <strong>Node JS</strong>. You can send this to your Web series Enthusiast Fans
+                    and
+                    find out who really knows the Show.</p>
+
+                <a class="link link-primary" href="https://replit.com/@SomeEarthJ/Questions-here-we-go?embed=1&output=1#index.js"> Live Project</a>
+                <a class="link link-secondary" href="https://github.com/SomeEarth86/Quiz-1-TVF-Aspirant"> View Source Code</a>
+            </div>
+        </li>
+
+    </ul>
+
+
 </body>
+
 </html>
