--- a/blogs.html
+++ b/blogs.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,8 +10,9 @@
     <link href="styles.css" rel="stylesheet" />
 
 </head>
+
 <body>
-    
+
     <nav class="navigation container">
         <div class="nav-brand">Adarsh Baalak</div>
         <ul class="list-non-bullet nav-pills">
@@ -28,9 +30,34 @@
     </nav>
 
     <header class="hero">
-       
+
         <h1 class="hero-heading">My <span class="heading-inverted">Blogs</span></h1>
     </header>
 
+    <ul class="list-non-bullet blog">
+        <li>
+            <div class="container container-center">
+                <h1>Dummy Blog 1 ->This Site Has All the Dummy Text You'll Ever Need</h1>
+                <small>July 2021</small>
+                <p>Today, there are many dummy/filler text generators to choose from, so you don’t necessarily need to use Lorem ipsum. There’s, for example, Corporate ipsum which is based off of business terminologies. Or Cupcake ipsum for those who love baked goods.</p>
+
+                <a class="link link-primary" href="/">Read More</a>
+
+            </div>
+        </li>
+        <li>
+            <div class="container container-center blog">
+                <h1>Dummy Blog 2 -> this is a dummy blog</h1>
+                <small>July 2021</small>
+                <p>Dummy text: Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'.</p>
+
+                <a class="link link-primary" href="/"> Read more</a>
+
+            </div>
+        </li>
+
+
+
 </body>
+
 </html>
