--- a/blogs.html
+++ b/blogs.html
@@ -39,7 +39,9 @@
             <div class="container container-center">
                 <h1>Dummy Blog 1 ->This Site Has All the Dummy Text You'll Ever Need</h1>
                 <small>July 2021</small>
-                <p>Today, there are many dummy/filler text generators to choose from, so you don’t necessarily need to use Lorem ipsum. There’s, for example, Corporate ipsum which is based off of business terminologies. Or Cupcake ipsum for those who love baked goods.</p>
+                <p>Today, there are many dummy/filler text generators to choose from, so you don’t necessarily need to
+                    use Lorem ipsum. There’s, for example, Corporate ipsum which is based off of business terminologies.
+                    Or Cupcake ipsum for those who love baked goods.</p>
 
                 <a class="link link-primary" href="/">Read More</a>
 
@@ -49,15 +51,31 @@
             <div class="container container-center blog">
                 <h1>Dummy Blog 2 -> this is a dummy blog</h1>
                 <small>July 2021</small>
-                <p>Dummy text: Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'.</p>
+                <p>Dummy text: Its function as a filler or as a tool for comparing the visual impression of different
+                    typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy
+                    the space which will later be filled with 'real' content. This is required when, for example, the
+                    final text is not yet available. Dummy text is also known as 'fill text'.</p>
 
                 <a class="link link-primary" href="/"> Read more</a>
 
             </div>
         </li>
 
-
-
+        <footer class="footer container">
+            <div class="footer-header">Social Media Handles</div>
+            <ul class="social-links list-non-bullet">
+                <li class="list-item-inline">
+                    <a class="link" href="https://github.com/SomeEarth86">Github</a>
+                </li>
+                <li class="list-item-inline">
+                    <a class="link" href="https://twitter.com/Samarth019">Twitter</a>
+                </li>
+                <li class="list-item-inline">
+                    <a class="link" href="https://www.linkedin.com/in/samarth-krishna-joshi/">Linkedin</a>
+                </li>
+            </ul>
+        </footer>
+    
 </body>
 
 </html>
