feat: site updation

--- a/blogs.html
+++ b/blogs.html
@@ -14,7 +14,7 @@
 <body>
 
     <nav class="navigation container">
-        <div class="nav-brand">Adarsh Baalak</div>
+        <div class="nav-brand">Samarth Joshi</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link " href="/"><strong>Home</strong></a>
@@ -43,12 +43,12 @@
                     use Lorem ipsum. There’s, for example, Corporate ipsum which is based off of business terminologies.
                     Or Cupcake ipsum for those who love baked goods.</p>
 
-                <a class="link link-primary" href="/">Read More</a>
+                <a class="link link-primary" href="dummy-blog-1.html">Read More</a>
 
             </div>
         </li>
         <li>
-            <div class="container container-center blog">
+            <div class="container container-center">
                 <h1>Dummy Blog 2 -> this is a dummy blog</h1>
                 <small>July 2021</small>
                 <p>Dummy text: Its function as a filler or as a tool for comparing the visual impression of different
@@ -56,7 +56,7 @@
                     the space which will later be filled with 'real' content. This is required when, for example, the
                     final text is not yet available. Dummy text is also known as 'fill text'.</p>
 
-                <a class="link link-primary" href="/"> Read more</a>
+                <a class="link link-primary" href="dummy-blog-2.html"> Read more</a>
 
             </div>
         </li>
