--- a/lib/components.html
+++ b/lib/components.html
@@ -96,7 +96,7 @@
 
     <header class="hero">
         <img class="hero-img" src="/images/hero.svg" />
-        <h1 class="hero-heading">Adarsh Baalak the <span class="heading-inverted">Web Developer </span></h1>
+        <h1 class="hero-heading">Samarth Joshi the <span class="heading-inverted">Web Developer </span></h1>
     </header>
 
     <hr>
