--- a/dummy-blog-2.html
+++ b/dummy-blog-2.html
@@ -14,7 +14,7 @@
 <body>
 
     <nav class="navigation container">
-        <div class="nav-brand">Adarsh Baalak</div>
+        <div class="nav-brand">Samarth Joshi</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link link-active" href="/"><strong>Home</strong></a>
