--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home| Adarsh Baalak</title>
+    <title>Home| Samarth Joshi</title>
 
     <link href="styles.css" rel="stylesheet" />
 
@@ -12,7 +12,7 @@
 <body>
     
     <nav class="navigation container">
-        <div class="nav-brand">Adarsh Baalak</div>
+        <div class="nav-brand">Samarth Joshi</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link link-active" href="/"><strong>Home</strong></a>
@@ -29,7 +29,7 @@
 
     <header class="hero">
         <img class="hero-img" src="/images/hero.svg" />
-        <h1 class="hero-heading">Adarsh Baalak the <span class="heading-inverted">Web Developer </span></h1>
+        <h1 class="hero-heading">Samarth Joshi the <span class="heading-inverted">Web Developer </span></h1>
     </header>
   
 
