--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects | Adarsh Baalak</title>
+    <title>Projects | Samarth Joshi</title>
 
     <link href="styles.css" rel="stylesheet" />
 
@@ -14,7 +14,7 @@
 <body>
 
     <nav class="navigation container">
-        <div class="nav-brand">Adarsh Baalak</div>
+        <div class="nav-brand">Samarth Joshi</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link" href="/"><strong>Home</strong></a>
@@ -39,7 +39,7 @@
             <div class="container container-center">
                 <h1>Could you "BE" more fanatic about F.R.I.E.N.D.S. ?</h1>
                 <small>Jul 2020</small>
-                <p>Another <strong>Node JS</strong> CLI app. Buult as an assignment in the camp. This checks your
+                <p>Another <strong>Node JS</strong> CLI app. Built as an assignment in the camp. This checks your
                     knowledge on the very famous Sitcom of all time F.R.I.E.N.D.S .</p>
 
                 <a class="link link-primary"
