--- a/projects.html
+++ b/projects.html
@@ -39,25 +39,15 @@
             <div class="container container-center">
                 <h1>Minion Language Translator</h1>
                 <small>Aug 2020</small>
-                <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
+                <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the
+                    translator to convert your text from English to Minion speak or Banana language.</p>
 
-                <a class="link link-primary"
-                    href="<li>
-                        <div class="container container-center">
-                            <h1>Could you "BE" more fanatic about F.R.I.E.N.D.S. ?</h1>
-                            <small>Jul 2020</small>
-                            <p>Another <strong>Node JS</strong> CLI app. Built as an assignment in the camp. This checks your
-                                knowledge on the very famous Sitcom of all time F.R.I.E.N.D.S .</p>
-            
-                            <a class="link link-primary"
-                                href="https://minionverse.netlify.app/"> Live Project</a>
-                            <a class="link link-secondary" href="https://github.com/SomeEarth86/neog-camp-banana-speak"> View Source
-                                Code</a>
-                        </div>
-                    </li>"> Live Project</a>
-                <a class="link link-secondary" href="https://github.com/SomeEarth86/Quiz-2-FRIENDS"> View Source
+                <a class="link link-primary" href="https://minionverse.netlify.app/"> Live Project</a>
+                <a class="link link-secondary" href="https://github.com/SomeEarth86/neog-camp-banana-speak"> View Source
                     Code</a>
             </div>
+        </li>
+        </div>
         </li>
 
         <li>
