--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,30 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
+                <h1>Book Recommendation</h1>
+                <small>Aug 2020</small>
+                <p>Do you read Books? You would find some good recommendations for all the genre. Made using ReactJs with love.</p>
+
+                <a class="link link-primary" href=" https://j49c0.csb.app/"> Live Project</a>
+                <a class="link link-secondary" href="https://github.com/SomeEarth86/Emojipedia"> View Source
+                    Code</a>
+            </div>
+        </li>
+        
+        <li>
+            <div class="container container-center">
+                <h1>EmojiPedia</h1>
+                <small>Aug 2020</small>
+                <p>Do you know your country India very well? What about all its neighbour countries and their Flags.A simple ReactJS based project using useState to show this emoji interpreter.</p>
+
+                <a class="link link-primary" href=" https://j49c0.csb.app/"> Live Project</a>
+                <a class="link link-secondary" href="https://github.com/SomeEarth86/Emojipedia"> View Source
+                    Code</a>
+            </div>
+        </li>
+
+        <li>
+            <div class="container container-center">
                 <h1>Minion Language Translator</h1>
                 <small>Aug 2020</small>
                 <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the
@@ -47,8 +71,8 @@
                     Code</a>
             </div>
         </li>
-        </div>
-        </li>
+        <!-- </div> -->
+        
 
         <li>
             <div class="container container-center">
