--- a/projects.html
+++ b/projects.html
@@ -41,8 +41,8 @@
                 <small>Aug 2020</small>
                 <p>Do you read Books? You would find some good recommendations for all the genre. Made using ReactJs with love.</p>
 
-                <a class="link link-primary" href=" https://j49c0.csb.app/"> Live Project</a>
-                <a class="link link-secondary" href="https://github.com/SomeEarth86/Emojipedia"> View Source
+                <a class="link link-primary" href="https://k0j73.csb.app/"> Live Project</a>
+                <a class="link link-secondary" href="https://github.com/SomeEarth86/Book-recommendation"> View Source
                     Code</a>
             </div>
         </li>
