--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,18 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
+                <h1>Shakespeare Translation</h1>
+                <small>Aug 2020</small>
+                <p>Convert from English to Shakespeare. Shakespeare invented many words and his style of narration in many ways was unique to his time. This translator takes English as input and converts to Shakespeare English.</p>
+
+                <a class="link link-primary" href="https://shakespeare-dialect.netlify.app/"> Live Project</a>
+                <a class="link link-secondary" href="https://github.com/SomeEarth86/Shakespeare-translation"> View Source
+                    Code</a>
+            </div>
+        </li>
+
+        <li>
+            <div class="container container-center">
                 <h1>Book Recommendation</h1>
                 <small>Aug 2020</small>
                 <p>Do you read Books? You would find some good recommendations for all the genre. Made using ReactJs with love.</p>
