--- a/projects.html
+++ b/projects.html
@@ -37,8 +37,20 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
+                <h1>mark 11 - Lucky BirthDay</h1>
+                <small>Aug 2021</small>
+                <p>A simple vanilla JS based app that takes Date of Birth and Lucky number as Input, based on that it tells whether they are or lucky or not.</p>
+
+                <a class="link link-primary" href="https://heavy-driver.netlify.app/"> Live Project</a>
+                <a class="link link-secondary" href="https://github.com/SomeEarth86/Lucky-Birthday/tree/main"> View Source
+                    Code</a>
+            </div>
+        </li>
+
+        <li>
+            <div class="container container-center">
                 <h1>mark 10 - BahiKhaata</h1>
-                <small>Aug 2020</small>
+                <small>Aug 2021</small>
                 <p>A simple cash register made in vanilla JS. It takes bill and cash given as input and return minimum no of notes that needs to be returned.</p>
 
                 <a class="link link-primary" href="https://bahikhaata.netlify.app/"> Live Project</a>
@@ -50,7 +62,7 @@
         <li>
             <div class="container container-center">
                 <h1>Shakespeare Translation</h1>
-                <small>Aug 2020</small>
+                <small>Aug 2021</small>
                 <p>Convert from English to Shakespeare. Shakespeare invented many words and his style of narration in many ways was unique to his time. This translator takes English as input and converts to Shakespeare English.</p>
 
                 <a class="link link-primary" href="https://shakespeare-dialect.netlify.app/"> Live Project</a>
@@ -62,7 +74,7 @@
         <li>
             <div class="container container-center">
                 <h1>Book Recommendation</h1>
-                <small>Aug 2020</small>
+                <small>Aug 2021</small>
                 <p>Do you read Books? You would find some good recommendations for all the genre. Made using ReactJs with love.</p>
 
                 <a class="link link-primary" href="https://k0j73.csb.app/"> Live Project</a>
@@ -74,7 +86,7 @@
         <li>
             <div class="container container-center">
                 <h1>EmojiPedia</h1>
-                <small>Aug 2020</small>
+                <small>Aug 2021</small>
                 <p>Do you know your country India very well? What about all its neighbour countries and their Flags.A simple ReactJS based project using useState to show this emoji interpreter.</p>
 
                 <a class="link link-primary" href=" https://j49c0.csb.app/"> Live Project</a>
@@ -86,7 +98,7 @@
         <li>
             <div class="container container-center">
                 <h1>Minion Language Translator</h1>
-                <small>Aug 2020</small>
+                <small>Aug 2021</small>
                 <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the
                     translator to convert your text from English to Minion speak or Banana language.</p>
 
@@ -101,7 +113,7 @@
         <li>
             <div class="container container-center">
                 <h1>Could you "BE" more fanatic about F.R.I.E.N.D.S. ?</h1>
-                <small>Jul 2020</small>
+                <small>Jul 2021</small>
                 <p>Another <strong>Node JS</strong> CLI app. Built as an assignment in the camp. This checks your
                     knowledge on the very famous Sitcom of all time F.R.I.E.N.D.S .</p>
 
@@ -114,7 +126,7 @@
         <li>
             <div class="container container-center">
                 <h1>TVF Aspirant's Quiz</h1>
-                <small>Jul 2020</small>
+                <small>Jul 2021</small>
                 <p>A CLI app built with <strong>Node JS</strong>. You can send this to your Web series Enthusiast Fans
                     and
                     find out who really knows the Show.</p>
