--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,18 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
+                <h1>mark 12 - Fun with Triangles</h1>
+                <small>Aug 2021</small>
+                <p>A fun triangle quiz in Vanilla JS. The different Quizzes and activities made the learning aspect of triangle intresting.</p>
+
+                <a class="link link-primary" href="https://triangle-mania.netlify.app/"> Live Project</a>
+                <a class="link link-secondary" href="https://github.com/SomeEarth86/Triangle-quiz"> View Source
+                    Code</a>
+            </div>
+        </li>
+
+        <li>
+            <div class="container container-center">
                 <h1>mark 11 - Lucky BirthDay</h1>
                 <small>Aug 2021</small>
                 <p>A simple vanilla JS based app that takes Date of Birth and Lucky number as Input, based on that it tells whether they are or lucky or not.</p>
