--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,18 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
+                <h1>mark 13 - Palindrome Birthday</h1>
+                <small>Aug 2021</small>
+                <p>A simple Vanilla JS which takes the user's birthday as input and tell whether their Birthday is palindrome or not. If the Birthday is not palindrome it will tell the next nearest date from the Entered BIrthday.</p>
+
+                <a class="link link-primary" href="https://dark-knight-rises.netlify.app/"> Live Project</a>
+                <a class="link link-secondary" href="https://github.com/SomeEarth86/Palindrome-Birthday/tree/main"> View Source
+                    Code</a>
+            </div>
+        </li>
+        
+        <li>
+            <div class="container container-center">
                 <h1>mark 12 - Fun with Triangles</h1>
                 <small>Aug 2021</small>
                 <p>A fun triangle quiz in Vanilla JS. The different Quizzes and activities made the learning aspect of triangle intresting.</p>
