--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,18 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
+                <h1>mark 14 - Stock Profile Calculator</h1>
+                <small>Aug 2021</small>
+                <p>A simple Vanilla JS based project that takes initial price of stock, quantity of stocks purchased, selling price of the Stocks as input and tell result whether the user made Profit or loss and Percentage.</p>
+
+                <a class="link link-primary" href="https://harshad-mehta.netlify.app/"> Live Project</a>
+                <a class="link link-secondary" href="https://github.com/SomeEarth86/Stocks-Profile-Calculator"> View Source
+                    Code</a>
+            </div>
+        </li>
+       
+        <li>
+            <div class="container container-center">
                 <h1>mark 13 - Palindrome Birthday</h1>
                 <small>Aug 2021</small>
                 <p>A simple Vanilla JS which takes the user's birthday as input and tell whether their Birthday is palindrome or not. If the Birthday is not palindrome it will tell the next nearest date from the Entered BIrthday.</p>
