style: footer styling redone

--- a/blogs.html
+++ b/blogs.html
@@ -62,19 +62,22 @@
         </li>
 
         <footer class="footer container">
-            <div class="footer-header">Social Media Handles</div>
-            <ul class="social-links list-non-bullet">
-                <li class="list-item-inline">
-                    <a class="link" href="https://github.com/SomeEarth86">Github</a>
-                </li>
-                <li class="list-item-inline">
-                    <a class="link" href="https://twitter.com/Samarth019">Twitter</a>
-                </li>
-                <li class="list-item-inline">
-                    <a class="link" href="https://www.linkedin.com/in/samarth-krishna-joshi/">Linkedin</a>
-                </li>
-            </ul>
-        </footer>
+        <div class="footer-header">Social Media Handles</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a  href="https://github.com/SomeEarth86"> <img src="images/github.svg" style="width: 30px;" alt="Github" id="github"></a>
+            </li>
+            <li class="list-item-inline">
+                <a  href="https://twitter.com/Samarth019"> <img src="images/twitter.svg" style="width: 30px;" alt="Twitter" id="twitter"></a>
+            </li>
+            <li class="list-item-inline">
+                <a  href="https://someearth.netlify.app/"> <img src="images/portfolio.svg" style="width: 30px;" alt="Portfolio" id="portfolio"></a>
+            </li>
+            <li class="list-item-inline">
+                <a  href="https://www.linkedin.com/in/samarth-krishna-joshi/"> <img style="width: 30px;" src="images/linkedin.svg" alt="linkedin" id="linkedin"></a>
+            </li>
+        </ul>
+    </footer>
     
 </body>
 
