--- a/projects.html
+++ b/projects.html
@@ -121,7 +121,7 @@
                 <a class="link link-secondary" href="https://github.com/SomeEarth86/Emojipedia">View Source</a>
             </div>
         </li>
-        
+
         <li>
             <div class="container container-center">
                 <h1>Shakespeare Translation</h1>
@@ -152,7 +152,7 @@
         <li>
             <div class="container container-center">
                 <h1>Could you "BE" more fanatic about F.R.I.E.N.D.S. ?</h1>
-                <small>Jul 2021</small>
+                <p><small>Jul 2021</small></p>
                 <p>Another <strong>Node JS</strong> CLI app. Built as an assignment in the camp. This checks your
                     knowledge on the very famous Sitcom of all time F.R.I.E.N.D.S .</p>
 
@@ -161,8 +161,8 @@
                 <a class="link link-secondary" href="https://github.com/SomeEarth86/Quiz-2-FRIENDS">View Source</a>
             </div>
         </li>
-        <li>
-            <div class="container container-center">
+        <li >
+            <div class="container  container-center">
                 <h1>TVF Aspirant's Quiz</h1>
                 <small>Jul 2021</small>
                 <p>A CLI app built with <strong>Node JS</strong>. You can send this to your Web series Enthusiast Fans
