--- a/blogs.html
+++ b/blogs.html
@@ -37,30 +37,26 @@
     <ul class="list-non-bullet blog">
         <li>
             <div class="container container-center">
-                <h1>Dummy Blog 1 ->This Site Has All the Dummy Text You'll Ever Need</h1>
-                <small>July 2021</small>
-                <p>Today, there are many dummy/filler text generators to choose from, so you don’t necessarily need to
-                    use Lorem ipsum. There’s, for example, Corporate ipsum which is based off of business terminologies.
-                    Or Cupcake ipsum for those who love baked goods.</p>
+                <h1> Essentials tools to start Web Dev journey (Part 2)</h1>
+                <small>Aug 2021</small>
+                <p>In the last article, we discussed mainly the scope of the web dev and knowing about various jargon related to it. This article will focus sharply on tools and steps to start the web development journey. With the rise of the Internet, the developer is gaining decent shape and size (the more, the better), thanks to this advancement we have plenty of tools for exploration. Here we look at them:</p>
 
-                <a class="link link-primary" href="dummy-blog-1.html">Read More</a>
+                <a class="link link-primary" href="https://some-earth.notion.site/Essentials-tools-to-start-Web-Dev-journey-Part-2-9db0b6105b494c408601c89b523e8330"> Read more</a>
 
             </div>
         </li>
+
         <li>
             <div class="container container-center">
-                <h1>Dummy Blog 2 -> this is a dummy blog</h1>
-                <small>July 2021</small>
-                <p>Dummy text: Its function as a filler or as a tool for comparing the visual impression of different
-                    typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy
-                    the space which will later be filled with 'real' content. This is required when, for example, the
-                    final text is not yet available. Dummy text is also known as 'fill text'.</p>
+                <h1>Essentials Tools to start Web Dev journey. (Part 1)</h1>
+                <small>Aug 2021</small>
+                <p>In the field of Computer Science, there are so many paths that can be explored, and fortunately, they can be rewarding in the form of a full-fledged carrier option. One such example is Web Development, since the inception of the Internet (the 90s onwards) the world has seen a massive shift in terms of everything.</p>
 
-                <a class="link link-primary" href="dummy-blog-2.html"> Read more</a>
+                <a class="link link-primary" href="https://some-earth.notion.site/Essentials-Tools-to-start-Web-Dev-journey-Part-1-de0d8f9feac947c4ac59875c0a830cc6">Read More</a>
 
             </div>
         </li>
-
+        
         <footer class="footer container">
         <div class="footer-header">Social Media Handles</div>
         <ul class="social-links list-non-bullet">
