--- a/projects.html
+++ b/projects.html
@@ -176,6 +176,19 @@
             </div>
         </li>
 
+        <li >
+            <div class="container  container-center">
+                <h1>How well Do you know me Quiz</h1>
+                <small>Jul 2021</small>
+                <p>AA CLI app built with nodeJS. You can send this to your friends and find out who really knows you.</p>
+
+                <a class="link link-primary"
+                    href="https://replit.com/@SomeEarthJ/How-Well-Do-You-know-Me?embed=1&output=1#index.js"> Live
+                    Project</a>
+                <a class="link link-secondary" href="https://github.com/SomeEarth86/How-Well-Do-You-know-Me">View Source</a>
+            </div>
+        </li>
+
     </ul>
 
     <footer class="footer container">
