--- a/projects.html
+++ b/projects.html
@@ -180,7 +180,7 @@
             <div class="container  container-center">
                 <h1>How well Do you know me Quiz</h1>
                 <small>Jul 2021</small>
-                <p>AA CLI app built with nodeJS. You can send this to your friends and find out who really knows you.</p>
+                <p>A CLI app built with nodeJS. You can send this to your friends and find out who really knows you.</p>
 
                 <a class="link link-primary"
                     href="https://replit.com/@SomeEarthJ/How-Well-Do-You-know-Me?embed=1&output=1#index.js"> Live
