--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <a  href="https://github.com/SomeEarth86"> <img src="images/github.svg" style="width: 30px;" alt="Github" id="github"></a>
             </li>
             <li class="list-item-inline">
-                <a  href="https://twitter.com/Samarth019"> <img src="images/twitter.svg" style="width: 30px;" alt="Twitter" id="twitter"></a>
+                <a  href="https://twitter.com/SomeEarthSays"> <img src="images/twitter.svg" style="width: 30px;" alt="Twitter" id="twitter"></a>
             </li>
 
             <li class="list-item-inline">
