fix: naming convention

--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
-                <h1>mark 14 - Stock Profile Calculator</h1>
+                <h1>Stock Profile Calculator (Mark 14)</h1>
                 <small>Aug 2021</small>
                 <p>A simple Vanilla JS based project that takes initial price of stock, quantity of stocks purchased,
                     selling price of the Stocks as input and tell result whether the user made Profit or loss and
@@ -51,7 +51,7 @@
 
         <li>
             <div class="container container-center">
-                <h1>mark 13 - Palindrome Birthday</h1>
+                <h1>Palindrome Birthday (Mark 13)</h1>
                 <small>Aug 2021</small>
                 <p>A simple Vanilla JS which takes the user's birthday as input and tell whether their Birthday is
                     palindrome or not. If the Birthday is not palindrome it will tell the next nearest date from the
@@ -64,7 +64,7 @@
 
         <li>
             <div class="container container-center">
-                <h1>mark 12 - Fun with Triangles</h1>
+                <h1>Fun with Triangles (Mark 12)</h1>
                 <small>Aug 2021</small>
                 <p>A fun triangle quiz in Vanilla JS. The different Quizzes and activities made the learning aspect of
                     triangle intresting.</p>
@@ -76,7 +76,7 @@
 
         <li>
             <div class="container container-center">
-                <h1>mark 11 - Lucky BirthDay</h1>
+                <h1>Lucky BirthDay (Mark 11)</h1>
                 <small>Aug 2021</small>
                 <p>A simple vanilla JS based app that takes Date of Birth and Lucky number as Input, based on that it
                     tells whether they are or lucky or not.</p>
@@ -88,7 +88,7 @@
 
         <li>
             <div class="container container-center">
-                <h1>mark 10 - BahiKhaata</h1>
+                <h1>BahiKhaata (Mark 10)</h1>
                 <small>Aug 2021</small>
                 <p>A simple cash register made in vanilla JS. It takes bill and cash given as input and return minimum
                     no of notes that needs to be returned.</p>
@@ -100,7 +100,7 @@
 
         <li>
             <div class="container container-center">
-                <h1>Book Recommendation</h1>
+                <h1>Book Recommendation (Mark 09)</h1>
                 <small>Aug 2021</small>
                 <p>Do you read Books? You would find some good recommendations for all the genre. Made using ReactJs
                     with love.</p>
@@ -112,7 +112,7 @@
 
         <li>
             <div class="container container-center">
-                <h1>EmojiPedia</h1>
+                <h1>EmojiPedia (Mark 08)</h1>
                 <small>Aug 2021</small>
                 <p>Do you know your country India very well? What about all its neighbour countries and their Flags.A
                     simple ReactJS based project using useState to show this emoji interpreter.</p>
@@ -124,7 +124,7 @@
 
         <li>
             <div class="container container-center">
-                <h1>Shakespeare Translation</h1>
+                <h1>Shakespeare Translation (Mark 07)</h1>
                 <small>Aug 2021</small>
                 <p>Convert from English to Shakespeare. Shakespeare invented many words and his style of narration in
                     many ways was unique to his time. This translator takes English as input and converts to Shakespeare
@@ -137,7 +137,7 @@
 
         <li>
             <div class="container container-center">
-                <h1>Minion Language Translator</h1>
+                <h1>Minion Language Translator (Mark 06)</h1>
                 <small>Aug 2021</small>
                 <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the
                     translator to convert your text from English to Minion speak or Banana language.</p>
@@ -146,12 +146,22 @@
                 <a class="link link-secondary" href="https://github.com/SomeEarth86/neog-camp-banana-speak">View Source</a>
             </div>
         </li>
-        <!-- </div> -->
+
+        <li>
+            <div class="container container-center">
+                <h1>My Portfolio (Mark 3,4 & 5)</h1>
+                <small>Aug 2021</small>
+                <p>My Portfolio containing all my projects, blogs and link to socials, made using HTML, CSS and JS.</p>
+
+                <a class="link link-primary" href="https://someearth.netlify.app/"> Live Project</a>
+                <a class="link link-secondary" href="https://github.com/SomeEarth86/Portfolio">View Source</a>
+            </div>
+        </li>
 
 
         <li>
             <div class="container container-center">
-                <h1>Could you "BE" more fanatic about F.R.I.E.N.D.S. ?</h1>
+                <h1>Could you "BE" more fanatic about F.R.I.E.N.D.S. ? (Mark 2)</h1>
                 <p><small>Jul 2021</small></p>
                 <p>Another <strong>Node JS</strong> CLI app. Built as an assignment in the camp. This checks your
                     knowledge on the very famous Sitcom of all time F.R.I.E.N.D.S .</p>
@@ -163,7 +173,7 @@
         </li>
         <li >
             <div class="container  container-center">
-                <h1>TVF Aspirant's Quiz</h1>
+                <h1>TVF Aspirant's Quiz (Mark 2)</h1>
                 <small>Jul 2021</small>
                 <p>A CLI app built with <strong>Node JS</strong>. You can send this to your Web series Enthusiast Fans
                     and
@@ -178,7 +188,7 @@
 
         <li >
             <div class="container  container-center">
-                <h1>How well Do you know me Quiz</h1>
+                <h1>How well Do you know me Quiz (Mark 1)</h1>
                 <small>Jul 2021</small>
                 <p>A CLI app built with nodeJS. You can send this to your friends and find out who really knows you.</p>
 
