fix: blog footer

--- a/blogs.html
+++ b/blogs.html
@@ -52,12 +52,12 @@
                 <small>Aug 2021</small>
                 <p>In the field of Computer Science, there are so many paths that can be explored, and fortunately, they can be rewarding in the form of a full-fledged carrier option. One such example is Web Development, since the inception of the Internet (the 90s onwards) the world has seen a massive shift in terms of everything.</p>
 
-                <a class="link link-primary" href="https://some-earth.notion.site/Essentials-Tools-to-start-Web-Dev-journey-Part-1-de0d8f9feac947c4ac59875c0a830cc6">Read More</a>
+                <a class="blog-link" href="https://some-earth.notion.site/Essentials-Tools-to-start-Web-Dev-journey-Part-1-de0d8f9feac947c4ac59875c0a830cc6">Read More</a>
 
             </div>
         </li>
         
-        <footer class="footer container">
+        <footer class="footer container footer-blog">
         <div class="footer-header">Social Media Handles</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
