--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
         <div class="footer-header">Social Media Handles</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a  href="https://github.com/SomeEarth86"> <img src="images/github.svg" style="width: 30px;" alt="Github" id="github"></a>
+                <a target="blank" href="https://github.com/SomeEarth86"> <img src="images/github.svg" style="width: 30px;" alt="Github" id="github"></a>
             </li>
             <li class="list-item-inline">
-                <a  href="https://twitter.com/SomeEarthSays"> <img src="images/twitter.svg" style="width: 30px;" alt="Twitter" id="twitter"></a>
+                <a target="blank" href="https://twitter.com/SomeEarthSays"> <img src="images/twitter.svg" style="width: 30px;" alt="Twitter" id="twitter"></a>
             </li>
 
             <li class="list-item-inline">
-                <a  href="https://www.linkedin.com/in/samarth-krishna-joshi/"> <img style="width: 30px;" src="images/linkedin.svg" alt="linkedin" id="linkedin"></a>
+                <a target="blank" href="https://www.linkedin.com/in/samarth-krishna-joshi/"> <img style="width: 30px;" src="images/linkedin.svg" alt="linkedin" id="linkedin"></a>
             </li>
         </ul>
     </footer>
